Unify command line use of create operations