@@ -390,25 +390,31 @@ public abstract class AbstractCreateOperation<T extends AbstractCreateOperation<
             throw new OperationOptionException("ERROR: Expecting the package, project and base names as the arguments.");
         }
 
-        if (package_name == null || package_name.isEmpty()) {
+        if (package_name == null || package_name.isBlank()) {
             System.out.println("Please enter a package name (for instance: com.example):");
             package_name = System.console().readLine();
+            if (package_name == null || package_name.isEmpty()) {
+                throw new OperationOptionException("ERROR: package name is required.");
+            }
         } else {
             System.out.println("Using package name: " + package_name);
         }
 
-        if (project_name == null || project_name.isEmpty()) {
+        if (project_name == null || project_name.isBlank()) {
             System.out.println("Please enter a project name (for instance: my-app):");
             project_name = System.console().readLine();
+            if (project_name == null || project_name.isEmpty()) {
+                throw new OperationOptionException("ERROR: project name is required.");
+            }
         } else {
             System.out.println("Using project name: " + project_name);
         }
 
-        if (base_name == null || base_name.isEmpty()) {
+        if (base_name == null || base_name.isBlank()) {
             var default_base_name = generateBaseName(project_name);
             System.out.println("Please enter the base name for generated project classes (default: " + default_base_name + "):");
             base_name = System.console().readLine();
-            if (base_name == null || base_name.trim().isEmpty()) {
+            if (base_name == null || base_name.isBlank()) {
                 base_name = default_base_name;
                 System.out.println("Using base name: " + base_name);
             }
